plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'consulting.reason'
version = '1.0.0'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    annotationProcessor(
            'org.projectlombok:lombok'
    )
    compileOnly(
            'org.projectlombok:lombok'
    )
    implementation(
            'com.fasterxml.jackson.module:jackson-module-jakarta-xmlbind-annotations',
            'io.hypersistence:hypersistence-utils-hibernate-63:3.7.3',
            'org.liquibase:liquibase-core',
            'org.modelmapper:modelmapper:3.2.0',
            'org.springframework.boot:spring-boot-starter-data-jpa',
            'org.springframework.boot:spring-boot-starter-validation',
            'org.springframework.boot:spring-boot-starter-web'
    )
    runtimeOnly(
            'org.postgresql:postgresql'
    )
    testImplementation(
            'org.springframework.boot:spring-boot-starter-test'
    )
    testRuntimeOnly(
            'com.h2database:h2'
    )
}

tasks.named('test') {
    useJUnitPlatform()
}
